--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -23,32 +23,27 @@
           <p class="lead text-muted">
           윤우의 웹페이지에 오신 것을 환영합니다.
           <br>
-          미래에 오를지, 오르지 않을지 궁금한 종목을 넣어보세요!
+          내 주식이 오를까요, 오르지 않을까요?
+          <br>
+          머신러닝으로 학습한 모델이 알려드립니다!
+          <br>
+          궁금한 종목을 검색해보세요!
           </p>
         </div>
       </div>
     </section>
-    {% if user_list %}
+    {% if stock_list %}
     <section class="py-5 text-center container">
-      <!-- 
-        여기에 HTML 코드를 작성해 주세요. 
-
-        주어진 user_list 에 있는 유저를 각각 표시합니다.
-
-        Hint:
-          - 어떻게 해야 주어진 user_list 변수를 사용할 수 있을까요?
-          - 주어진 데이터를 테이블로 표기하는 방법은 뭔가요?
-
-        예시)
-
-        예를 들어 데이터베이스에 유저 데이터가 하나 있습니다. 
-          - 유저네임이 'patrick', 아이디 값이 '1'
-
-        그렇다면 이 페이지를 접속하면 'patrick' 과 '1' 이 보여야 합니다.
-      -->
-      {% for user in user_list %}
-      <p>{{user[1]}} {{user[0]}}</p>
+      확인 방법 예시 : http://127.0.0.1:5000/api/pred?stockname=삼성전자
+      <br>
+      <br>
+      검색 가능한 종목의 예시는 아래와 같으며, 시가총액 순입니다.
+      <br>
+      <br>
+      {% for stock in stock_list %}
+      <p> {{stock}} </p>
       {% endfor %}
+
     </section>
     {% endif %}
   </body>
