--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -11,21 +11,21 @@
     <div class="navbar navbar-dark bg-dark shadow-sm">
       <div class="container">
         <a href="#" class="navbar-brand d-flex align-items-center">
-          <strong>내 주식은 좋은 주식일까?</strong>
+          <strong>내 주식은 좋은 주식일까?!</strong>
         </a>
       </div>
     </div>
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">내 주식은 좋은 주식일까?</h1>
+          <h1 class="fw-light">내 주식은 좋은 주식일까?!</h1>
           <br>
           <p class="lead text-muted">
           윤우의 웹페이지에 오신 것을 환영합니다.
           <br>
           내 주식이 오를까요, 오르지 않을까요?
           <br>
-          머신러닝으로 학습한 모델이 알려드립니다!
+          머신러닝으로 학습한 모델이 알려드립니다.
           <br>
           궁금한 종목을 검색해보세요!
           </p>
